--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Projeto inicial Github</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body><header>
+<body>
+    <header>
+    <img src="" alt="">
     <h1>Aqui vai uma imagem</h1>
     <ul>
         <li>Escola</li>
