--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    <img src="" alt="">
+    <img src="" alt="Learning-bro.png">
     <h1>Aqui vai uma imagem</h1>
     <ul>
         <li>Escola</li>
